// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline doesn't write falsy css callback 1`] = `<DocumentFragment />`;

exports[`Inline writes css 1`] = `
<DocumentFragment>
  <style
    data-cache="-ui"
    data-dash="1abu38z-global"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`Inline writes css callback 1`] = `
<DocumentFragment>
  <style
    data-cache="-ui"
    data-dash="18nnvke-global"
  >
    color:var(--black);
  </style>
</DocumentFragment>
`;

exports[`Inline writes css object 1`] = `
<DocumentFragment>
  <style
    data-cache="-ui"
    data-dash="1abu38z-global"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`Inline writes css w/ nonce 1`] = `
<DocumentFragment>
  <style
    data-cache="-ui"
    data-dash="1abu38z-global"
    nonce="E8gagwlWEGlgwel"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`useGlobal sets global styles with a function value: global 1`] = `
<style
  data-dash="-ui"
>
  
  body{background:var(--color-blue);}
</style>
`;

exports[`useGlobal sets global styles with a function value: variables 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--color-blue:#09a;}
</style>
`;

exports[`useGlobal sets global styles with a string value: :root 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--blue:#09a;}
</style>
`;

exports[`useThemes adds variables then cleans up 1`] = `
<style
  data-dash="-ui"
>
  
  .-ui-dark-theme{--bg:#000;}
</style>
`;

exports[`useThemes adds variables then cleans up 2`] = `
<style
  data-dash="-ui"
>
  
  .-ui-light-theme{--bg:#fff;}
</style>
`;

exports[`useVariables adds variables then cleans up: :root 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--blue:#09a;}
</style>
`;
